--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ELASTICSEARCH_HOST=
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_SCHEME=
+ELASTICSEARCH_USER=
+ELASTICSEARCH_PASS=
