--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "cviebrock/laravel-elasticsearch": "^3.2",
+        "elasticsearch/elasticsearch": "~6.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "reliese/laravel": "^0.0.13"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
